# simple_rover_ros

./: LICENSE  README.md  notes.txt
simple_rover_control/: CMakeLists.txt  package.xml  rover_control.launch
simple_rover_control/config/: rover_control.yaml
simple_rover_control/launch/: display.launch  rover_control.launch  rover_world.launch
simple_rover_control/src/: simple_rover_auto_driver_node.cpp
simple_rover_description/: CMakeLists.txt  package.xml
simple_rover_description/launch/: simple_rover_rviz.launch
simple_rover_description/urdf/: common_properties.urdf.xacro  frames.gv  materials.urdf.xacro  simple_rover.gazebo  simple_rover.urdf  simple_rover.urdf.xacro
simple_rover_description/urdf/sensors/: depth_camera_gazebo.urdf.xacro  kinect.urdf.xacro  zed2.urdf.xacro
simple_rover_description/urdf/sensors/zed/: zed.urdf  zed.urdf.xacro
simple_rover_gazebo/: CMakeLists.txt  package.xml
simple_rover_gazebo/launch/: rover_world.launch  rover_world_2.launch
simple_rover_gazebo/models/: heightmap.sdf
simple_rover_gazebo/rviz/: simple_rover.rviz
simple_rover_gazebo/worlds/: rough_terrain.world
