<?xml version="1.0"?>
<package format="2">
  <name>simple_rover_description</name>
  <version>0.0.0</version>
  <description>The simple_rover_description package</description>

  <maintainer email="davidjorna@gmail.com">David Jorna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>

</package>
